Fixed component wrapping.

--- a/website-source/src/styles.css
+++ b/website-source/src/styles.css
@@ -25,7 +25,7 @@
   /* Column container */
   .row {  
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap-reverse;
   }
   
   /* Create two unequal columns */
